--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GROQ_API_KEY=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
+GROQ_API_KEY="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"
